removing star imports and adding default values for nullable parameters